# nanoclaw-on-amplifier

./: .gitignore  README.md  install.sh  pyproject.toml
.amplifier/digital-twin-universe/profiles/: nanoclaw-full-telegram.yaml  nanoclaw-on-amplifier-e2e.yaml
amp_claw/: __init__.py  cli.py
nanoclaw-provider/: _smoke.ts  amplifier.ts
nanoclaw-skill/add-amplifier/: SKILL.md  host-amplifier.ts
poc/: .dtu-e2e-pass.txt  bundle.local.md  bundle.md  poc_b_supervisor.py  smoke_test.py
scripts/: apply-onecli-bypass.py  patch-stderr-debug.py
